# report_good-law_ai

./: .env.example  .gitignore  1.csv_analise_projetos.py  1.csv_gerador_projetos.py  1.csv_gerador_projetos_condensado.py  1.json_analise_projetos.py  2.csv_embedding_cluster.py  2.json_embedding_cluster.py  2.report_e_clustering_k_mean.py  2.report_e_clustering_por_area.py  3.analise_analistas_parecerista.html  3.analise_analistas_parecerista.qmd  3.csv_analise_cluster.py  3_1.csv_analise_cluster.py  3_2.clustering_melhorado.py  3_3.report_e_clustering_k_mean.py  5.analise_similaridade_projetos_deepseek.ipynb  5.analise_similaridade_projetos_deepseek.md  6.1.Claude_analise_agrupamentos_similares.ipynb  6_1_Claude_analise_agrupamentos_similares.ipynb  6_2_Gemini_analise_agrupamentos_similares.docx  6_2_Gemini_analise_agrupamentos_similares.ipynb  6_3_analise_similaridade_gemini.ipynb  6_3_analise_similaridade_gemini.md  6_4_analise_quadrantes_2.ipynb  6_5_analise_dispendio_quadrantes.docx  6_5_analise_dispendio_quadrantes.ipynb  7_analise_similaridade_ML.docx  7_analise_similaridade_ML.ipynb  7_teste.ipynb  Análise Completa - Projetos Lei do Bem.md  README.md  analise_analistas_parecerista.qmd  analise_discrepancias_q2q3.html  analise_discrepancias_q2q3.qmd  analise_langchain_claude.py  analise_langchain_deepseek.py  analise_lei_do_bem_deepseek_20250617_170016.md  analise_multivariada_lei_bem.py  analise_projetos.py  (+14 more)
Analises/: Análise Completa - Projetos Lei do Bem.md  lei_bem_metricas.json  lei_bem_metricas_areas.json
leann_index.leann/: leann_index.ids.txt  (+4 more)
(+22 files in other folders)
